Fixed button text alignment and user image

--- a/src/App.css
+++ b/src/App.css
@@ -113,6 +113,13 @@
   /* border: solid 1px red; */
 }
 
+.userDetails {
+  display: flex;
+  flex-direction: row;
+  gap:20px;
+  align-items: center;
+  justify-content: center;
+}
 /*CSS for top bar*/
 .searchBar {
   width: 60%;
@@ -146,8 +153,11 @@
 
 /*CSS for current balance component*/
 .currentBalanceContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   width: 100%;
-  height: 250px;
+  height: auto;
   background-color: #369Dc9;
   border-radius: 12px;
   grid-area: balanceCard;
@@ -164,7 +174,7 @@
   height: 100%;
   /* gap: 15px 15px; */
   grid-template-columns: 20% 20% 18% 18%;
-  justify-content: space-around;
+  justify-content: space-evenly;
   justify-items: center;
   grid-template-rows: auto;
   row-gap: 20px;
@@ -193,6 +203,7 @@
   width: 100%;
   font-size: 14px;
   text-align: justify;
+  border-collapse: collapse;
 }
 th {
   font-family: Poppins-Bold;
@@ -201,9 +212,15 @@ th {
 }
 td {
   border-bottom: solid 1px rgb(31, 31, 31);
+  border-left: none;
+  border-right: none;
   margin: 20px;
   padding: 10px;
   text-align: center;
+}
+
+tr:hover {
+  background-color: #161717;
 }
 
 .paymentBtn {
@@ -211,6 +228,7 @@ td {
   color: #2BC155;
   height: 32px;
   text-align: center;
+  line-height: 0;
 }
 
 .paymentUnpaid {
@@ -257,10 +275,13 @@ td {
   flex-direction: column;
 }
 .billingBtn {
-  color: black;
+  color: #202020;
   height: 32px;
   text-align: center;
-  width: 100px;
+  line-height: 0;
+  width: 110px;
+  font-size: 12px;
+  font-family: Poppins-Bold;
 }
 .paid {
   background-color: #2BC155;
@@ -281,6 +302,7 @@ td {
   height:16px;
   margin-right:15px;
   text-align: center;
+  line-height: 16px;
 }
 /*CSS for balance form container*/
 .balanceFormContainer {
